# drumscribble

./: .continue-here.md  .gitignore  pyproject.toml
artifacts/research/: 2026-03-05-recall-diagnosis-options.md
configs/train/: default.yaml
docs/plans/: 2026-02-17-drumscribble-implementation-plan.md  2026-02-17-sota-drum-transcription-design.md  2026-02-19-hf-drum-dataset-ecosystem-design.md  2026-02-19-hf-drum-dataset-ecosystem-plan.md  2026-02-21-hf-training-pipeline-design.md  2026-02-21-hf-training-pipeline-plan.md  2026-02-23-augmented-datasets-design.md  2026-02-23-augmented-datasets-plan.md  2026-02-25-parquet-mel-spec-dataset-design.md  2026-02-25-parquet-mel-spec-implementation.md  2026-02-28-remap-star-shards-design.md  2026-02-28-remap-star-shards-plan.md
scripts/: build_parquet_dataset.py  compute_features_job.py  eval_mdb_drums.py  monitor_f1.py  overfit_test.py  remap_star_shards.py  runpod_launch.sh  runpod_train.sh  split_parquet.py  train_hf_job.py  upload_egmd.sh  validate.py
scripts/hf_upload/: audio_augment.py  card_template.md  compute_features_aug.py  hcloud_bootstrap.sh  star_license_audit.py  star_license_audit_results.json  (+1 more)
tests/: conftest.py  test_attention.py  test_audio.py  test_audio_augment.py  test_augment.py  test_config.py  test_convnext.py  test_egmd.py  test_evaluate.py  test_export.py  test_features.py  test_film.py  test_inference.py  test_loss.py  test_mert.py  test_model.py  test_multi.py  test_parquet.py  test_parquet_loader.py  test_remap.py  test_star.py  test_targets.py  test_train.py  test_webdataset_loader.py
(+28 files in other folders)
